web/assets/style.css
* {
    padding: 0;
    margin: 0;
    font-family: sans-serif;
}

:root {
    --advanced-card: #fffde7;
    --advanced: #cddc39;
    --advanced-desc: #f0f4c3;
    --background: #fff;
    --default-card: #eceff1;
    --expert-card: #fff8e1;
    --expert-desc: #ffecb3;
    --expert: #ffc107;
    --recommended: #8bc34a;
    --recommended-card: #f1f8e9;
    --recommended-desc: #dcedc8;
    --text: #333;
    --unsafe-card: #ffebee;
    --unsafe-desc: #ffcdd2;
    --unsafe: #ff5722;
    --tag: #ccc;
}

@media (prefers-color-scheme: dark) {
    :root {
        --advanced-card: #312d00;
        --advanced: #d1df49;
        --advanced-desc: #383b0b;
        --background: #181a1b;
        --default-card: #212425;
        --expert-card: #342800;
        --expert-desc: #483600;
        --expert: #ffc71e;
        --recommended: #95c85a;
        --recommended-card: #283411;
        --recommended-desc: #374717;
        --text: #fefefe;
        --unsafe-card: #3f0009;
        --unsafe-desc: #510008;
        --unsafe: #ff6331;
        --tag: #35393b;
    }
}


.description,
.label,
.package {
    user-select: none;
    overflow-wrap: anywhere;
}
body {
    background: var(--background);
}
.Recommended action svg {
    color: var(--recommended) !important;
}
.Advanced action svg {
    color: var(--advanced) !important;
}
.Expert action svg {
    color: var(--expert) !important;
}
.Unsafe action svg {
    color: var(--unsafe) !important;
}
.tag {
    margin-top: 0.5rem;
    display: inline-block;
    padding: 0.4rem;
    background: var(--tag);
    color: var(--text);
    border-radius: 1rem;
}
container {
    margin: 0.5rem 0 0 0;
    display: flex;
    flex-direction: column;
    padding: 0.5rem;
    overflow-y: scroll;
    height: calc(100vh - 5.01rem);
    color: var(--text);
}
container::-webkit-scrollbar, container::-moz-scrollbar {
    display: none;
}
container .entry {
    padding: 1rem;
    margin: 0.5rem;
    border-radius: 1rem;
}
container .entry .label, .search {
    font-size: 1.5rem;
}
.search {
    text-align: center;
    width: calc(100vw - 8rem);
    padding: 0.5rem;
    border-radius: 1.5rem;
    outline: none;
    background: var(--background);
    border: 0.15rem solid #ccc;
}
search {
    margin-top: 0.5rem;
    display: flex;
    justify-content: center;
}

.collapsed, .collapsed-after, container .entry .description {
    transition: all 0.25s ease-out;
}

.collapsed {
    height: 0;
    overflow: hidden;
    padding: 0 !important;
    opacity: 0;
}
.collapsed-after {
    padding: 0 !important;
    margin: 0 !important;
}
container .entry .description {
    margin: 1rem 0 0.5rem;
    padding: 1rem;
    border-radius: 1rem;
    color: var(--text);
}
container .entry svg {
    float: right;
    width: 2rem;
    height: 2rem;
    color: #888;
}
@media only screen and (min-width: 768px) {
    .search {
        width: calc(100vw - 6rem);
    }
    search {
        margin-top: 1.5rem;
    }
    container {
        margin: 1rem 0 0 0;
        height: calc(100vh - 6.52rem);
    }
}

.default-card {
    background: var(--default-card);
}
.Unsafe {
    background: var(--unsafe-card);
}
.Unsafe .description {
    background: var(--unsafe-desc);
}
.Expert {
    background: var(--expert-card);
}
.Expert .description {
    background: var(--expert-desc);
}
.Advanced {
    background: var(--advanced-card);
}
.Advanced .description {
    background: var(--advanced-desc);
}
.Recommended {
    background: var(--recommended-card);
}
.Recommended .description {
    background: var(--recommended-desc);
}
#snackbar {
    visibility: hidden;
    margin: 0 auto;
    color: #000;
    left: 50%;
    transform: translateX(-50%);
    border-radius: 1rem;
    padding: 1rem;
    position: fixed;
    z-index: 1;
    border: 0.15rem solid #888;
}
#snackbar.success, #snackbar.failure {
    visibility: visible;
    animation: fadein 3s;
}

#snackbar.success {
    background: #f1f8e8;
}

#snackbar.failure {
    background: var(--unsafe-card);
}

@keyframes fadein {
    0% {
        bottom: 0;
        opacity: 0;
    }
    30% {
        bottom: 1rem;
        opacity: 1;
    }
    70% {
        bottom: 1rem;
        opacity: 1;
    }
    100% {
        bottom: 0;
        opacity: 0;
    }
}

